@@ -4,6 +4,7 @@
  * The SkinGUI is now the default gui.
  * If the SkinGUI is selected, a check is done on startup to see if the
    skin theme is installed. If not found, the default gui will be used.
+ * New command line option: -skingui
 
 (2013-04-28)
  * The option Move the window when the video area is dragged" is
